--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
 .navigation {
     /* Must be absolute to sit below the absolute image */
     position: absolute; 
-    top: 632px; /* 612px (image height) + 20px (margin) */
+    top: 620px; /* 612px (image height) + *px (margin) */
     left: 50%; /* Start at center */
     transform: translateX(-50%); /* Pull back by half its width for perfect centering */
     
